// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Primary story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "",
        "borderRadius": 16,
      },
    ]
  }
  variant="primary"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={1}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 48,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#081F32",
            "fontFamily": "SpaceGroteskBold",
          },
          {},
          [
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
      variant="primary"
    >
      Primary
    </Text>
  </RNGestureHandlerButton>
</View>
`;

exports[`renders PrimaryLoading story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "",
        "borderRadius": 16,
      },
    ]
  }
  variant="primary"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={false}
    handlerTag={2}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 48,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#081F32",
            "fontFamily": "SpaceGroteskBold",
          },
          {},
          [
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
      variant="primary"
    >
      Primary loading
    </Text>
  </RNGestureHandlerButton>
</View>
`;

exports[`renders Secondary story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "",
        "borderRadius": 16,
      },
    ]
  }
  variant="secondary"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={3}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 48,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#081F32",
            "fontFamily": "SpaceGroteskBold",
          },
          {},
          [
            {
              "color": "#081F32",
            },
          ],
        ]
      }
      variant="secondary"
    >
      Secondary
    </Text>
  </RNGestureHandlerButton>
</View>
`;

exports[`renders SecondaryLoading story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "",
        "borderRadius": 16,
      },
    ]
  }
  variant="secondary"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={false}
    handlerTag={4}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 48,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#081F32",
            "fontFamily": "SpaceGroteskBold",
          },
          {},
          [
            {
              "color": "#081F32",
            },
          ],
        ]
      }
      variant="secondary"
    >
      Secondary loading
    </Text>
  </RNGestureHandlerButton>
</View>
`;
